res.rendering blog data onto homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,11 @@
 <h1>The Tech Blog</h1>
+
+{{!-- {{#each blogData as |blog|}}
+<section class="card">
+  <p>{{blog.title}}</p>
+  <p>{{blog.content}}</p>
+</section>
+{{/each}} --}}
+
+<p>hello</p>
+<p>{{blogData}}</p>
