resolved the get request

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,12 @@
 <h1>The Tech Blog</h1>
 
-{{!-- {{#each blogData as |blog|}}
+{{#each blogs as |blog|}}
 <section class="card">
-  <p>{{blog.title}}</p>
-  <p>{{blog.content}}</p>
+    <h2>{{blog.title}}</h2>
+    <p></p>
+    <p>{{blog.content}}</p>
 </section>
-{{/each}} --}}
+{{/each}}
 
-<p>hello</p>
-<p>{{blogs}}</p>
+{{!-- <p>hello</p>
+<p>{{blogs[0]}}</p> --}}
