--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,21 @@
 <h1>The Tech Blog</h1>
+
+<h2>Login</h2>
+
+<form class="form login-form">
+  <div class="form-group">
+    <label for="username-login">username:</label>
+    <input class="form-input" type="text" id="username-login" />
+  </div>
+  <div class="form-group">
+    <label for="password-login">password:</label>
+    <input class="form-input" type="password" id="password-login" />
+  </div>
+  <div class="form-group">
+    <button class="btn btn-primary" type="submit">login</button>
+  </div>
+
+  <a href="/signup">Don't have an account? Sign up</a>
+</form>
+
+<script src="/js/login.js"></script>
