--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,15 +17,20 @@
     <nav>
         <a href="/">Home</a>
         <button class="btn">Dashboard</button>
-        <a href="/login">Login</a>
+        
         {{#if loggedIn}}
-        <button class="btn" id="logout">Logout</button>
+        <button id="logout">Logout</button>
+        {{else}}
+        <a href="/login">Login</a>
         {{/if}}
+
     </nav>
     <main class="container">
         {{{body}}}
     </main>
-    
+    {{#if loggedIn}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
