created create and edit blog functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 <body class="container">
     <nav>
         <a href="/">Home</a>
-        <button class="btn">Dashboard</button>
+        <a href="/dashboard">Dashboard</a>
         
         {{#if loggedIn}}
         <button id="logout">Logout</button>
