--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,8 +1,12 @@
 <h1>Create Blog</h1>
 
+
 <form class="create-form">
     <div>
         <input class="form-input" type="text" name="blog-title" id="blog-title"/>
+        
+    </div>
+    <div>
         <textarea class="form-textarea" name="blog-content" id="blog-content"></textarea>
     </div>
 
