--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,6 +5,7 @@
     <a href="/blog/{{blog.id}}">
         <h2>{{blog.title}}</h2>
         <p>{{blog.content}}</p>
+        <p>Created by {{blog.user.username}}</p>
     </a> 
 </section>
 {{/each}}
