--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,5 +1,10 @@
-<h2>{{blog.title}}</h2>
-<p>{{blog.content}}</p>
+<h1>The Tech Blog</h1>
+
+<section class="card">
+    <h2>{{blog.title}}</h2>
+    <p>{{blog.content}}</p>
+</section>
+
 
 <h3>Comments:</h3>
 {{>comments blog.comments}}
