--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,7 +1,6 @@
 {{#if this}}
 {{#each this}}
-    <h3>{{comment_text}}</h3>
-    <p>{{user.username}}</p>
+    <p>{{comment_text}} <strong>BY {{user.username}}</strong></p>
 {{/each}}
 {{else}}
 <p>There are no comments</p>
